crates/utils/re_gpu_video/src/vulkan/h264/snapshots/re_gpu_video__vulkan__h264__tests__ipb.snap
---
source: crates/utils/re_gpu_video/src/vulkan/h264/tests.rs
assertion_line: 83
expression: "trace_fixture(\"ipb\")"
---
# AU 0
Sps { id: 0, 64x64, poc_type: 0, max_num_ref_frames: 3, log2_max_frame_num: 4 }
Pps { id: 0, sps: 0 }
DecodeFrame { frame_num: 0, poc: 0 (top 0, bottom 0), idr, ref -> slot 0 }
# AU 1
DecodeFrame { frame_num: 1, poc: 6 (top 6, bottom 6), ref -> slot 1, refs: [slot 0 (fn 0, poc 0)], l0: [0] }
# AU 2
DecodeFrame { frame_num: 2, poc: 2 (top 2, bottom 2), non-ref, refs: [slot 0 (fn 0, poc 0), slot 1 (fn 1, poc 6)], l0: [0], l1: [1] }
# AU 3
DecodeFrame { frame_num: 2, poc: 4 (top 4, bottom 4), non-ref, refs: [slot 0 (fn 0, poc 0), slot 1 (fn 1, poc 6)], l0: [0], l1: [1] }
# AU 4
DecodeFrame { frame_num: 2, poc: 12 (top 12, bottom 12), ref -> slot 2, refs: [slot 0 (fn 0, poc 0), slot 1 (fn 1, poc 6)], l0: [1, 1, 0] }
# AU 5
DecodeFrame { frame_num: 3, poc: 8 (top 8, bottom 8), non-ref, refs: [slot 0 (fn 0, poc 0), slot 1 (fn 1, poc 6), slot 2 (fn 2, poc 12)], l0: [1, 0], l1: [2] }
# AU 6
DecodeFrame { frame_num: 3, poc: 10 (top 10, bottom 10), non-ref, refs: [slot 0 (fn 0, poc 0), slot 1 (fn 1, poc 6), slot 2 (fn 2, poc 12)], l0: [1, 0], l1: [2] }
# AU 7
DecodeFrame { frame_num: 3, poc: 18 (top 18, bottom 18), ref -> slot 3, refs: [slot 0 (fn 0, poc 0), slot 1 (fn 1, poc 6), slot 2 (fn 2, poc 12)], l0: [2, 2, 1, 0] }
FreeSlots [0]
# AU 8
DecodeFrame { frame_num: 4, poc: 14 (top 14, bottom 14), non-ref, refs: [slot 1 (fn 1, poc 6), slot 2 (fn 2, poc 12), slot 3 (fn 3, poc 18)], l0: [2, 1], l1: [3] }
# AU 9
DecodeFrame { frame_num: 4, poc: 16 (top 16, bottom 16), non-ref, refs: [slot 1 (fn 1, poc 6), slot 2 (fn 2, poc 12), slot 3 (fn 3, poc 18)], l0: [2, 1], l1: [3] }
# AU 10
DecodeFrame { frame_num: 4, poc: 24 (top 24, bottom 24), ref -> slot 0, refs: [slot 1 (fn 1, poc 6), slot 2 (fn 2, poc 12), slot 3 (fn 3, poc 18)], l0: [3, 3, 2, 1] }
FreeSlots [1]
# AU 11
DecodeFrame { frame_num: 5, poc: 20 (top 20, bottom 20), non-ref, refs: [slot 0 (fn 4, poc 24), slot 2 (fn 2, poc 12), slot 3 (fn 3, poc 18)], l0: [3, 2], l1: [0] }
# AU 12
DecodeFrame { frame_num: 5, poc: 22 (top 22, bottom 22), non-ref, refs: [slot 0 (fn 4, poc 24), slot 2 (fn 2, poc 12), slot 3 (fn 3, poc 18)], l0: [3, 2], l1: [0] }
# AU 13
DecodeFrame { frame_num: 5, poc: 30 (top 30, bottom 30), ref -> slot 1, refs: [slot 0 (fn 4, poc 24), slot 2 (fn 2, poc 12), slot 3 (fn 3, poc 18)], l0: [0, 0, 3, 2] }
FreeSlots [2]
# AU 14
DecodeFrame { frame_num: 6, poc: 26 (top 26, bottom 26), non-ref, refs: [slot 0 (fn 4, poc 24), slot 1 (fn 5, poc 30), slot 3 (fn 3, poc 18)], l0: [0, 3], l1: [1] }
# AU 15
DecodeFrame { frame_num: 6, poc: 28 (top 28, bottom 28), non-ref, refs: [slot 0 (fn 4, poc 24), slot 1 (fn 5, poc 30), slot 3 (fn 3, poc 18)], l0: [0, 3], l1: [1] }
# reorder delay 1
