crates/utils/re_gpu_video/src/vulkan/h264/snapshots/re_gpu_video__vulkan__h264__tests__ipb_pyramid.snap
---
source: crates/utils/re_gpu_video/src/vulkan/h264/tests.rs
assertion_line: 88
expression: "trace_fixture(\"ipb_pyramid\")"
---
# AU 0
Sps { id: 0, 64x64, poc_type: 0, max_num_ref_frames: 4, log2_max_frame_num: 4 }
Pps { id: 0, sps: 0 }
DecodeFrame { frame_num: 0, poc: 0 (top 0, bottom 0), idr, ref -> slot 0 }
# AU 1
DecodeFrame { frame_num: 1, poc: 8 (top 8, bottom 8), ref -> slot 1, refs: [slot 0 (fn 0, poc 0)], l0: [0] }
# AU 2
DecodeFrame { frame_num: 2, poc: 4 (top 4, bottom 4), ref -> slot 2, refs: [slot 0 (fn 0, poc 0), slot 1 (fn 1, poc 8)], l0: [0], l1: [1] }
# AU 3
DecodeFrame { frame_num: 3, poc: 2 (top 2, bottom 2), non-ref, refs: [slot 0 (fn 0, poc 0), slot 1 (fn 1, poc 8), slot 2 (fn 2, poc 4)], l0: [0], l1: [2, 1] }
# AU 4
DecodeFrame { frame_num: 3, poc: 6 (top 6, bottom 6), non-ref, refs: [slot 0 (fn 0, poc 0), slot 1 (fn 1, poc 8), slot 2 (fn 2, poc 4)], l0: [2, 0], l1: [1] }
# AU 5
DecodeFrame { frame_num: 3, poc: 16 (top 16, bottom 16), ref -> slot 3, refs: [slot 0 (fn 0, poc 0), slot 1 (fn 1, poc 8), slot 2 (fn 2, poc 4)], l0: [1, 1, 2, 0] }
# AU 6
DecodeFrame { frame_num: 4, poc: 12 (top 12, bottom 12), ref -> slot 4, refs: [slot 0 (fn 0, poc 0), slot 1 (fn 1, poc 8), slot 2 (fn 2, poc 4), slot 3 (fn 3, poc 16)], l0: [1, 2, 0], l1: [3] }
FreeSlots [0, 2]
# AU 7
DecodeFrame { frame_num: 5, poc: 10 (top 10, bottom 10), non-ref, refs: [slot 1 (fn 1, poc 8), slot 3 (fn 3, poc 16), slot 4 (fn 4, poc 12)], l0: [1], l1: [4, 3] }
# AU 8
DecodeFrame { frame_num: 5, poc: 14 (top 14, bottom 14), non-ref, refs: [slot 1 (fn 1, poc 8), slot 3 (fn 3, poc 16), slot 4 (fn 4, poc 12)], l0: [4, 1], l1: [3] }
# AU 9
DecodeFrame { frame_num: 5, poc: 24 (top 24, bottom 24), ref -> slot 0, refs: [slot 1 (fn 1, poc 8), slot 3 (fn 3, poc 16), slot 4 (fn 4, poc 12)], l0: [3, 3, 4, 1] }
# AU 10
DecodeFrame { frame_num: 6, poc: 20 (top 20, bottom 20), ref -> slot 2, refs: [slot 0 (fn 5, poc 24), slot 1 (fn 1, poc 8), slot 3 (fn 3, poc 16), slot 4 (fn 4, poc 12)], l0: [3, 4, 1], l1: [0] }
FreeSlots [1, 4]
# AU 11
DecodeFrame { frame_num: 7, poc: 18 (top 18, bottom 18), non-ref, refs: [slot 0 (fn 5, poc 24), slot 2 (fn 6, poc 20), slot 3 (fn 3, poc 16)], l0: [3], l1: [2, 0] }
# AU 12
DecodeFrame { frame_num: 7, poc: 22 (top 22, bottom 22), non-ref, refs: [slot 0 (fn 5, poc 24), slot 2 (fn 6, poc 20), slot 3 (fn 3, poc 16)], l0: [2, 3], l1: [0] }
# AU 13
DecodeFrame { frame_num: 7, poc: 32 (top 32, bottom 32), ref -> slot 1, refs: [slot 0 (fn 5, poc 24), slot 2 (fn 6, poc 20), slot 3 (fn 3, poc 16)], l0: [0, 0, 2, 3] }
# AU 14
DecodeFrame { frame_num: 8, poc: 28 (top 28, bottom 28), ref -> slot 4, refs: [slot 0 (fn 5, poc 24), slot 1 (fn 7, poc 32), slot 2 (fn 6, poc 20), slot 3 (fn 3, poc 16)], l0: [0, 2, 3], l1: [1] }
FreeSlots [3, 2]
# AU 15
DecodeFrame { frame_num: 9, poc: 26 (top 26, bottom 26), non-ref, refs: [slot 0 (fn 5, poc 24), slot 1 (fn 7, poc 32), slot 4 (fn 8, poc 28)], l0: [0], l1: [4, 1] }
# AU 16
DecodeFrame { frame_num: 9, poc: 30 (top 30, bottom 30), non-ref, refs: [slot 0 (fn 5, poc 24), slot 1 (fn 7, poc 32), slot 4 (fn 8, poc 28)], l0: [4, 0], l1: [1] }
# AU 17
DecodeFrame { frame_num: 9, poc: 40 (top 40, bottom 40), ref -> slot 2, refs: [slot 0 (fn 5, poc 24), slot 1 (fn 7, poc 32), slot 4 (fn 8, poc 28)], l0: [1, 1, 4, 0] }
# AU 18
DecodeFrame { frame_num: 10, poc: 36 (top 36, bottom 36), ref -> slot 3, refs: [slot 0 (fn 5, poc 24), slot 1 (fn 7, poc 32), slot 2 (fn 9, poc 40), slot 4 (fn 8, poc 28)], l0: [1, 4, 0], l1: [2] }
FreeSlots [0, 4]
# AU 19
DecodeFrame { frame_num: 11, poc: 34 (top 34, bottom 34), non-ref, refs: [slot 1 (fn 7, poc 32), slot 2 (fn 9, poc 40), slot 3 (fn 10, poc 36)], l0: [1], l1: [3, 2] }
# AU 20
DecodeFrame { frame_num: 11, poc: 38 (top 38, bottom 38), non-ref, refs: [slot 1 (fn 7, poc 32), slot 2 (fn 9, poc 40), slot 3 (fn 10, poc 36)], l0: [3, 1], l1: [2] }
# AU 21
DecodeFrame { frame_num: 11, poc: 46 (top 46, bottom 46), ref -> slot 0, refs: [slot 1 (fn 7, poc 32), slot 2 (fn 9, poc 40), slot 3 (fn 10, poc 36)], l0: [2, 2, 3, 1] }
# AU 22
DecodeFrame { frame_num: 12, poc: 42 (top 42, bottom 42), ref -> slot 4, refs: [slot 0 (fn 11, poc 46), slot 1 (fn 7, poc 32), slot 2 (fn 9, poc 40), slot 3 (fn 10, poc 36)], l0: [2, 3, 1], l1: [0] }
FreeSlots [1, 3]
# AU 23
DecodeFrame { frame_num: 13, poc: 44 (top 44, bottom 44), non-ref, refs: [slot 0 (fn 11, poc 46), slot 2 (fn 9, poc 40), slot 4 (fn 12, poc 42)], l0: [4, 2], l1: [0] }
# reorder delay 2
